deploy/k8s/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: messanger
data:
  envoy.yaml: |
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/v1/ws" }
                    route:
                      cluster: gateway
                      timeout: 0s
                      upgrade_configs:
                      - upgrade_type: websocket
                  - match: { prefix: "/ws" }
                    route:
                      cluster: gateway
                      timeout: 0s
                      upgrade_configs:
                      - upgrade_type: websocket
                  - match: { prefix: "/api/v1/users" }
                    route: { cluster: user, timeout: 15s }
                  - match: { prefix: "/api/v1/auth" }
                    route: { cluster: auth, timeout: 15s }
                  - match: { prefix: "/api/v1/chats" }
                    route: { cluster: chat, timeout: 15s }
                  - match: { prefix: "/api/v1/messages" }
                    route: { cluster: chat, timeout: 15s }
                  - match: { prefix: "/api/v1/media" }
                    route: { cluster: media, timeout: 30s }
                  - match: { prefix: "/api/v1/search" }
                    route: { cluster: search, timeout: 15s }
                  - match: { prefix: "/api/v1/notify" }
                    route: { cluster: notify, timeout: 15s }
                  - match: { prefix: "/" }
                    direct_response:
                      status: 404
                      body: { inline_string: "not found" }
              http_filters:
              - name: envoy.filters.http.grpc_json_transcoder
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                  proto_descriptor: "/etc/envoy/messanger_descriptor.pb"
                  services:
                  - user.v1.UserService
                  - auth.v1.AuthService
                  - chat.v1.ChatService
                  - media.v1.MediaService
                  - search.v1.SearchService
                  - notify.v1.NotifyService
                  print_options:
                    add_whitespace: false
                    always_print_primitive_fields: true
                    preserve_proto_field_names: false
                  convert_grpc_status: true
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: gateway
        connect_timeout: 1s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: gateway
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: gateway, port_value: 8082 }

      - name: user
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: user
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: user, port_value: 50051 }

      - name: auth
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: auth
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: auth, port_value: 50050 }

      - name: chat
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: chat
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: chat, port_value: 50052 }

      - name: media
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: media
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: media, port_value: 50053 }

      - name: search
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: search
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: search, port_value: 50054 }

      - name: notify
        connect_timeout: 1s
        type: LOGICAL_DNS
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: notify
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: notify, port_value: 50055 }
binaryData:
  messanger_descriptor.pb: CuZ4ChVnb29nbGUvYXBpL2h0dHAucHJvdG8SCmdvb2dsZS5hcGkieQoESHR0cBIqCgVydWxlcxgBIAMoCzIULmdvb2dsZS5hcGkuSHR0cFJ1bGVSBXJ1bGVzEkUKH2Z1bGx5X2RlY29kZV9yZXNlcnZlZF9leHBhbnNpb24YAiABKAhSHGZ1bGx5RGVjb2RlUmVzZXJ2ZWRFeHBhbnNpb24i2gIKCEh0dHBSdWxlEhoKCHNlbGVjdG9yGAEgASgJUghzZWxlY3RvchISCgNnZXQYAiABKAlIAFIDZ2V0EhIKA3B1dBgDIAEoCUgAUgNwdXQSFAoEcG9zdBgEIAEoCUgAUgRwb3N0EhgKBmRlbGV0ZRgFIAEoCUgAUgZkZWxldGUSFgoFcGF0Y2gYBiABKAlIAFIFcGF0Y2gSNwoGY3VzdG9tGAggASgLMh0uZ29vZ2xlLmFwaS5DdXN0b21IdHRwU [...]
